--- a/listagem_passagens.html
+++ b/listagem_passagens.html
@@ -36,7 +36,9 @@
                       <a class="dropdown-item" href="listagem_passagens.html">
                          <i class="fa-solid fa-plane"></i> Passagens Aéreas</a>
                       <a class="dropdown-item" href="pacotes.html">
-                        <i class="fa-solid fa-plane"></i> Pacotes</a>
+                        <i class="fa-solid fa-box-open"></i> Pacotes</a>
+
+
                     
                    </div>
                  </div>
@@ -49,16 +51,16 @@
           <div class="navbar-nav">
              <a class="nav-link nav-item" href="#ajuda"><i class="fa-solid fa-circle-info"></i> Ajuda</a>
              <a class="nav-link nav-item" href="#pedidos"><i class="fa-solid fa-cart-shopping"></i> Meus Pedidos</a>
-             <a class="nav-link nav-item" href="#janelamodal">
+             <a class="nav-link nav-item" href="login.html">
                 <i class="fa-solid fa-right-to-bracket"></i> Entrar </a>
           </div>
        </div>
     </div>
  </nav>
 
-<div class="container mt-5 mb-5">
+ <div class="container mt-5 mb-5">
   <div class="row align-items-end">
-    <div class="col-4">
+    <div class="col-lg-4">
       <div class="text-center">
 
         <p class="text-sm font-weight-light  mt-2">Defina a origem:</p>
@@ -70,12 +72,12 @@
 
       </div>
     </div>
-    <div class="col-1">
+    <div class="col-lg-1 d-none d-lg-block">
 
-      <span class=""> <i class="fa-solid fa-right-long text-1"></i> </span>
+      <span class=""> <i class="fa-solid fa-right-long text-1" style="transform: scale(1.0);"></i> </span>
 
     </div>
-    <div class="col-3">
+    <div class="col-lg-3">
       <div class="text-center">
 
         <p class="text-sm font-weight-light  mt-2">Defina o destino:</p>
@@ -88,7 +90,7 @@
       </div>
     </div>
 
-    <div class="col-1">
+    <div class="col-1 ">
 
       <button class="btn btn-info btn-md ml-5">Procurar</button>
       
@@ -97,7 +99,7 @@
 
 
 </div>
-</div>
+
 
 
      <div class="container">
